Atualizei restaurantes.html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -106,7 +106,7 @@
         </div>
         <div class="lojas">
             <h3>Quintal de Comida</h3>
-            <p>Restaurante vegano e ovolactovegetariano. Funcionamento presencial de quinta a sábado, das 16:00 às 22:00. .</p>
+            <p>Restaurante vegano e ovolactovegetariano. Funcionamento presencial de quinta a sábado, das 16:00 às 22:00.</p>
             <p>Endereço: Rua Miguel Gonçalves, 195, Montese - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/quintaldecomida?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
@@ -125,6 +125,11 @@
             <p>Pedidos pelo iFood.</p>
             <p>Clique <a href="https://instagram.com/theveggiefor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Agni Cozinha Vegetariana</h3>
+            <p>Congelados vegetarianos e veganos.</p>
+            <p>Endereço: Rua Hermano Vasconcelos, 327 - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/agnicozinhavegetariana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
     </main>
     
     <script>
