Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -97,6 +97,12 @@
             <p>Caso você queira um jantar diferente e especial o <a href="https://instagram.com/restauranteonlineoficial?igshid=MzRlODBiNWFlZA==" target="_blank">Restaurante On-line</a>, do <a href="https://instagram.com/cheffredericojayme?igshid=MzRlODBiNWFlZA==" target="_blank">Chef Frederico Jayme</a> adapta o cardápio vegetariano para os veganos. É uma proposta bem interessante, a cada semana o cardápio muda, sempre inspirado em algum local do mundo. A refeição é composta por 6 mini porções. A comida é muito gostosa e elaborada, vale a pena conferir!</p>
         </div>
         <div class="lojas">
+            <h2>Sopa!</h2>
+            <p>Uma dica super prática são as sopas da <a href="https://instagram.com/mexidonabrasil?igshid=MzRlODBiNWFlZA==">Mexidona.</a></p>
+            <p>São veganas e sem conservantes, têm vários sabores e o preço é bem acessível.</p>
+            <p>Eu costumo encontrar pra vender na <a href="https://instagram.com/divinaterrafortaleza?igshid=MzRlODBiNWFlZA==">Divina Terra</a> e na <a href="https://instagram.com/mundoverdefortaleza?igshid=MzRlODBiNWFlZA==">Mundo Verde</a>.</p>
+        </div>
+        <div class="lojas">
             <h2>Quero veganizar, mas o que eu vou passar no pão??</h2>
             <p>Essa é uma dificuldade que ocorre com algumas pessoas que se tornam veganas e que estão acostumadas a ingerir manteiga e outros latícinios. Vou dar algumas dicas que me ajudam e que eu uso bastante em casa.</p>
             <p>Uma boa pedida é fazer o pão no forno só com azeite mesmo. Também gosto de incrementar com ervas finas ou outras ervas, que são encontradas para vender facilmente em qualquer supermercado.</p>
