Atualizei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -64,6 +64,10 @@
             <p>Endereço: Av. 13 de Maio, 2344.</p>
             <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Meu Eco</h3>
+            <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
