Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -81,6 +81,15 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Padarias</h2>
+            <h3>Padarias com opções veganas no cardápio.</h3>
+            <ul>
+                <li><a href="https://instagram.com/viva.livremente?igshid=MzRlODBiNWFlZA==">Livremente</a></li>
+                <li><a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Pâine</a></li>  
+                <li><a href="https://instagram.com/graodalinoartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Grão D'Alino</a></li>  
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Farmácia</h2>
             <h4>Vegan Pharma</h4>
             <p>Farmácia de manipulação 100% vegana.</p>
