Atualizei lanchonetes.html

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -66,6 +66,12 @@
             <p>Delivery</p>
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Gostosuras Veg</h3>
+            <p>Sob encomenda.</p>
+            <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
