Atualizei festas.html

--- a/festas.html
+++ b/festas.html
@@ -84,6 +84,12 @@
             <p>Salgadinhos.</p>
             <p>Clique <a href="https://instagram.com/na.nave_gan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Gostosuras Veg</h3>
+            <p>Sob encomenda.</p>
+            <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
 
     </main>
     
