--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -63,7 +63,7 @@
         </div>
         <div class="lojas">
             <h3>GoVegan</h3>
-            <p>Delivery</p>
+            <p>Delivery.</p>
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
