Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -119,7 +119,8 @@
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
-                <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
+                <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>
+                <li><a href="https://instagram.com/vaniaburgers?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vânia Burgers</a></li>   
                 <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
