Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -110,7 +110,7 @@
                 <li><a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==">Malaguetta</a></li>
                 <li><a href="https://instagram.com/acarajedamanu?igshid=MzRlODBiNWFlZA==">Acarajé da Manu</a></li>
                 <li><a href="https://instagram.com/acaraje_e_cia?igshid=MzRlODBiNWFlZA==">Acarajé & Cia</a></li>   
-                <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a></li>
+                <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a> (Opção na Beira Mar)</li>
             </ul>
         </div>
         <div class="lojas">
@@ -120,7 +120,7 @@
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>
-                <li><a href="https://instagram.com/vaniaburgers?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vânia Burgers</a></li>   
+                <li><a href="https://instagram.com/vaniaburgers?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vânia Burgers</a> (Opção no Dragão do Mar)</li>   
                 <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
