--- a/onde-comer.html
+++ b/onde-comer.html
@@ -50,7 +50,7 @@
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
-                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a></li>
+                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana</a> (Somente por encomenda!)</li>   
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/nalu_pizzas?igshid=MzRlODBiNWFlZA==" target="_blank">Nalu</a></li>
@@ -76,7 +76,7 @@
             <h2>Lasanha!</h2>
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
-                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a></li>
+                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
                 <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>   
             </ul>
         </div>
@@ -129,10 +129,9 @@
             <h2>Petiscos!</h2>
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
-                <li><a href="https://instagram.com/cravoecanelagastrobar?igshid=MzRlODBiNWFlZA==">Cravo & Canela Gastrobar</a></li>
+                <li><a href="https://instagram.com/cravoecanelagastrobar?igshid=MzRlODBiNWFlZA==">Cravo & Canela Gastrobar</a> (Opção no Mercado dos Pinhões)</li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=MzRlODBiNWFlZA==">A Quitanda</a></li>
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
-                <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>
                 <li><a href="https://instagram.com/casapatua?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Patuá</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
