--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -65,6 +65,10 @@
             <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Aroma de Nuvem</h3>
+            <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Meu Eco</h3>
             <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
