Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -137,6 +137,12 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Strogonoff</h2>
+            <ul>
+                <li><a href="https://instagram.com/brasileirinhodelivery?igshid=YTQwZjQ0NmI0OA==">Brasileirinho Delivery</a></li> 
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Self Service!</h2>
             <ul>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
