--- a/onde-comer.html
+++ b/onde-comer.html
@@ -137,7 +137,7 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Strogonoff</h2>
+            <h2>Strogonoff!</h2>
             <ul>
                 <li><a href="https://instagram.com/brasileirinhodelivery?igshid=YTQwZjQ0NmI0OA==">Brasileirinho Delivery</a></li> 
             </ul>
