Atualizei lanchonetes.html

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -67,6 +67,11 @@
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Laje Head</h3>
+            <p>Endereço: Rua Paulino Nogueira, 82 - Benfica.</p>
+            <p>Clique <a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Gostosuras Veg</h3>
             <p>Sob encomenda.</p>
             <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
