--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -42,6 +42,7 @@
         <p>Como já falei anteriormente, veganismo não é dieta, mas um estilo de vida voltado para minimizar a exploração animal.</p>
         <p>Então é importante, além de manter uma dieta vegetariana, usar produtos e cosméticos veganos, ou seja, sem infredientes de origem animal, não testados em animais e de empresas que não testam em animais.</p>
         <p>Deixo abaixo algumas dicas de onde comprar cosméticos veganos em Fortaleza.</p>
+        <h1 class="titulos-categorias">Cosméticos</h1>
         <div class="lojas">
             <h3>Cativa Natureza</h3>
             <p>Loja de cosméticos naturais, orgânicos e veganos.</p>
@@ -71,6 +72,12 @@
         <div class="lojas">
             <h3>Meu Eco</h3>
             <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <br>
+        <h1 class="titulos-categorias">Produtos de Limpeza</h1>
+        <div class="lojas">
+            <h3>HK Eco</h3>
+            <p>Clique <a href="https://instagram.com/hkeco.br?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
     </main>
     
