Atualizei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -41,7 +41,7 @@
     <main>
         <p>Como já falei anteriormente, veganismo não é dieta, mas um estilo de vida voltado para minimizar a exploração animal.</p>
         <p>Então é importante, além de manter uma dieta vegetariana, usar produtos e cosméticos veganos, ou seja, sem infredientes de origem animal, não testados em animais e de empresas que não testam em animais.</p>
-        <p>Deixo abaixo algumas dicas de onde comprar cosméticos veganos em Fortaleza.</p>
+        <p>Deixo abaixo algumas dicas de onde comprar cosméticos e produtos de limpeza veganos em Fortaleza.</p>
         <br>
         <h1 class="titulos-categorias">Cosméticos</h1>
         <div class="lojas">
