Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -56,6 +56,7 @@
                 <li><a href="https://instagram.com/sitiotanques?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Tanques</a></li>
                 <li><a href="https://instagram.com/sitio_pachamama?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Pachamama</a></li>
                 <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
+                <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vale da Biodiversidade</a></li>
             </ul>
         </div>
         <div class="lojas">
