--- a/onde-comer.html
+++ b/onde-comer.html
@@ -87,7 +87,8 @@
             <ul>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
                 <li><a href="https://instagram.com/cozinhamamma_lu?igshid=MzRlODBiNWFlZA==" target="_blank">Cozinha da Mamma Lu</a></li>
-                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>   
+                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>  
+                <li><a href="https://instagram.com/nomarderosas?igshid=YTQwZjQ0NmI0OA==" target="_blank">Mar de Rosas</a></li> 
             </ul>
         </div>
         <div class="lojas">
