--- a/dicas.html
+++ b/dicas.html
@@ -57,6 +57,7 @@
                 <li><a href="https://instagram.com/sitio_pachamama?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Pachamama</a></li>
                 <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
                 <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vale da Biodiversidade</a></li>
+                <li><a href="https://instagram.com/cooperativa.capistrano?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cooperativa Capistrano</a></li>
             </ul>
         </div>
         <div class="lojas">
