Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -65,6 +65,7 @@
             <ul>
                 <li><a href="https://instagram.com/lila.natural?igshid=MzRlODBiNWFlZA==" target="_blank">Lila</a></li>
                 <li><a href="https://instagram.com/naturalizafoods?igshid=MzRlODBiNWFlZA==" target="_blank">Naturaliza</a></li>  
+                <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vale da Biodiversidade</a></li>
             </ul>
         </div>
         <div class="lojas">
