Atualizei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -71,8 +71,16 @@
             <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Resilienza</h3>
+            <p>Clique <a href="https://instagram.com/resilienzacosmeticosnaturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Meu Eco</h3>
             <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Calêndula</h3>
+            <p>Clique <a href="https://instagram.com/calendula_cosmeticos_naturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <br>
         <h1 class="titulos-categorias">Produtos de Limpeza</h1>
