atualizei lanchonetes.html

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -53,7 +53,7 @@
         </div>
         <div class="lojas">
             <h3>Cozinha da Luz</h3>
-            <p>Congelados Veganos.</p>
+            <p>Vegburgers saudáveis e deliciosos congelados.</p>
             <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
