Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -58,6 +58,7 @@
                 <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
                 <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vale da Biodiversidade</a></li>
                 <li><a href="https://instagram.com/cooperativa.capistrano?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cooperativa Capistrano</a></li>
+                <li><a href="https://instagram.com/cetraceara?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cetra</a></li>
             </ul>
         </div>
         <div class="lojas">
