--- a/onde-comer.html
+++ b/onde-comer.html
@@ -149,6 +149,12 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Feijoada!</h2>
+            <ul>
+                <li><a href="https://instagram.com/forneriadapraia?igshid=YTQwZjQ0NmI0OA==">Forneria da Praia</a></li> 
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Self Service!</h2>
             <ul>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
