Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -101,6 +101,22 @@
             <p>Clique <a href="https://instagram.com/veganpharma?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h2>Lojas de Produtos Naturais</h2>
+            <ul>
+                <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
+                <li><a href="https://instagram.com/divinaterrafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Divina Terra</a></li>
+                <li><a href="https://instagram.com/mundoverdefortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Mundo Verde</a></li>
+                <li><a href="https://instagram.com/lojadebemcomavida?igshid=YTQwZjQ0NmI0OA==" target="_blank">De Bem Com a Vida</a></li>
+                <li><a href="https://instagram.com/bienutrirdelivery?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bienutrir</a></li>
+                <li><a href="https://instagram.com/graosantoprodutosnaturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">Grão Santo</a></li>
+                <li><a href="https://instagram.com/lojasemear?igshid=YTQwZjQ0NmI0OA==" target="_blank">Loja Semear</a></li>
+                <li><a href="https://instagram.com/lojalagranel?igshid=YTQwZjQ0NmI0OA==" target="_blank">La Granel</a></li>
+                <li><a href="https://instagram.com/seletoagraneloficial?igshid=YTQwZjQ0NmI0OA==" target="_blank">Seleto a Granel</a></li> 
+                <li><a href="https://instagram.com/sementesgraos?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sementes Grãos</a></li>
+                <li><a href="https://instagram.com/sellenemegadiet?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sellene</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Feirinhas Agroecológicas com Opções de Lanches Veganos</h2>
             <p>Duas ótimas opções de passeio aos sábados pela manhã são as feiras agroecológicas Benfica e Fundação Cepema. A do <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==">Benfica</a> ocorre quinzenalmente na praça da Gentilândia e a da <a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==">Fundação Cepema</a> ocorre todo sábado no Parque Adahil Barreto.</p>
             <p>Além de uma grande variedade de produtos orgânicos, nessas feirinhas também encontramos várias opções de lanches sem ingredientes de origem animal.</p>
