Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -114,6 +114,8 @@
                 <li><a href="https://instagram.com/seletoagraneloficial?igshid=YTQwZjQ0NmI0OA==" target="_blank">Seleto a Granel</a></li> 
                 <li><a href="https://instagram.com/sementesgraos?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sementes Grãos</a></li>
                 <li><a href="https://instagram.com/sellenemegadiet?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sellene</a></li>
+                <li><a href="https://instagram.com/biomundoceiguatemi?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Iguatemi</a></li>
+                <li><a href="https://instagram.com/biomundoshoppingbenfica?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Shopping Benfica</a></li>
             </ul>
         </div>
         <div class="lojas">
