Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -59,6 +59,8 @@
                 <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vale da Biodiversidade</a></li>
                 <li><a href="https://instagram.com/cooperativa.capistrano?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cooperativa Capistrano</a></li>
                 <li><a href="https://instagram.com/cetraceara?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cetra</a></li>
+                <li><a href="https://instagram.com/cantinho.organico.fortaleza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Centinho do Orgânico</a></li>
+                <li><a href="https://instagram.com/adaoorganicos?igshid=YTQwZjQ0NmI0OA==" target="_blank">Adao Alimentos Orgânicos</a></li>
             </ul>
         </div>
         <div class="lojas">
