Atualizei lanchonetes.html

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -62,6 +62,11 @@
             <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Ri Veg</h3>
+            <p>Espadinhas veganas e sem glúten.</p>
+            <p>Clique <a href="https://instagram.com/riveggie?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>GoVegan</h3>
             <p>Delivery.</p>
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
