Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -93,7 +93,8 @@
             <ul>
                 <li><a href="https://instagram.com/viva.livremente?igshid=MzRlODBiNWFlZA==">Livremente</a></li>
                 <li><a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Pâine</a></li>  
-                <li><a href="https://instagram.com/graodalinoartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Grão D'Alino</a></li>  
+                <li><a href="https://instagram.com/graodalinoartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Grão D'Alino</a></li>
+                <li><a href="https://instagram.com/pequenapadariacaseira?igshid=YTQwZjQ0NmI0OA==" target="_blank">Pequena Padaria Caseira</a></li>  
             </ul>
         </div>
         <div class="lojas">
@@ -106,6 +107,7 @@
             <h2>Lojas de Produtos Naturais</h2>
             <ul>
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
+                <li><a href="https://instagram.com/quitandinha.artesanal?igshid=YTQwZjQ0NmI0OA==" target="_blank">Quitandinha</a></li>
                 <li><a href="https://instagram.com/divinaterrafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Divina Terra</a></li>
                 <li><a href="https://instagram.com/mundoverdefortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Mundo Verde</a></li>
                 <li><a href="https://instagram.com/lojadebemcomavida?igshid=YTQwZjQ0NmI0OA==" target="_blank">De Bem Com a Vida</a></li>
