Fiz correção no nome de um restaurante

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -48,7 +48,7 @@
                 <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar</a> (A melhor pizza, na minha opinião!)</li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
-                <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
+                <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Head</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
