Atualizei emporios.html

--- a/emporios.html
+++ b/emporios.html
@@ -52,6 +52,12 @@
             <p>Endereço: Rua João Ramalho, 404 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Soul Veg</h3>
+            <p>Quiosque com produtos veganos no shopping RioMar.</p>
+            <p>Endereço: Shopping RioMar - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/amosoulveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
