Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -85,6 +85,7 @@
                 <li><a href="https://instagram.com/lauranutrivegana?igshid=MzRlODBiNWFlZA==" target="_blank">Laura Braga</a></li>  
                 <li><a href="https://instagram.com/nutricionista_vegana?igshid=MzRlODBiNWFlZA==" target="_blank">Sara Ortins</a></li> 
                 <li><a href="https://instagram.com/lucasnutriveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">Lucas Martins</a></li> 
+                <li><a href="https://instagram.com/carolinaararipe.nutri?igshid=YTQwZjQ0NmI0OA==" target="_blank">Carolina Araripe</a></li> 
             </ul>
         </div>
         <div class="lojas">
