--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <footer>
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará.</p>
-        <p>Última atualização em: novembro de 2023.</p>
+        <p>Última atualização em: dezembro de 2023.</p>
     </footer>
 </body>
 </html>
