Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -86,6 +86,7 @@
                 <li><a href="https://instagram.com/nutricionista_vegana?igshid=MzRlODBiNWFlZA==" target="_blank">Sara Ortins</a></li> 
                 <li><a href="https://instagram.com/lucasnutriveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">Lucas Martins</a></li> 
                 <li><a href="https://instagram.com/carolinaararipe.nutri?igshid=YTQwZjQ0NmI0OA==" target="_blank">Carolina Araripe</a></li> 
+                <li><a href="https://instagram.com/abvelloso?igshid=YTQwZjQ0NmI0OA==" target="_blank">Ana Beatriz Velloso</a></li> 
             </ul>
         </div>
         <div class="lojas">
