Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -146,7 +146,15 @@
         <div class="lojas">
             <h2>Strogonoff!</h2>
             <ul>
+                <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura Cozinha</a></li>
                 <li><a href="https://instagram.com/brasileirinhodelivery?igshid=YTQwZjQ0NmI0OA==">Brasileirinho Delivery</a></li> 
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Moqueca!</h2>
+            <ul>
+                <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
+                <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
             </ul>
         </div>
         <div class="lojas">
