Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -135,6 +135,7 @@
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
+                <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura Cozinha</a></li>
                 <li><a href="https://instagram.com/cravoecanelagastrobar?igshid=MzRlODBiNWFlZA==">Cravo & Canela Gastrobar</a> (Opção no Mercado dos Pinhões)</li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=MzRlODBiNWFlZA==">A Quitanda</a></li>
