Atualizei dicas.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -148,6 +148,7 @@
             <h2>Strogonoff!</h2>
             <ul>
                 <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura Cozinha</a></li>
+                <li><a href="https://instagram.com/nusse.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Nüsse</a></li>
                 <li><a href="https://instagram.com/brasileirinhodelivery?igshid=YTQwZjQ0NmI0OA==">Brasileirinho Delivery</a></li> 
             </ul>
         </div>
@@ -156,6 +157,7 @@
             <ul>
                 <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
+                <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
         </div>
         <div class="lojas">
