Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -167,6 +167,15 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Salada!</h2>
+            <ul>
+                <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
+                <li><a href="https://instagram.com/saladeria?igshid=YTQwZjQ0NmI0OA==" target="_blank">Saladeria</a></li>
+                <li><a href="https://instagram.com/soodelibr?igshid=YTQwZjQ0NmI0OA==">Soodeli</a></li> 
+                <li><a href="https://instagram.com/sevensalads.ce?igshid=YTQwZjQ0NmI0OA==">Seven Salads</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Self Service!</h2>
             <ul>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
