--- a/dicas.html
+++ b/dicas.html
@@ -111,6 +111,7 @@
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/quitandinha.artesanal?igshid=YTQwZjQ0NmI0OA==" target="_blank">Quitandinha</a></li>
                 <li><a href="https://instagram.com/divinaterrafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Divina Terra</a></li>
+                <li><a href="https://instagram.com/armazemfitstore.fortaleza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Armazém Fit Store</a></li>
                 <li><a href="https://instagram.com/mundoverdefortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Mundo Verde</a></li>
                 <li><a href="https://instagram.com/lojadebemcomavida?igshid=YTQwZjQ0NmI0OA==" target="_blank">De Bem Com a Vida</a></li>
                 <li><a href="https://instagram.com/bienutrirdelivery?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bienutrir</a></li>
