--- a/dicas.html
+++ b/dicas.html
@@ -122,6 +122,7 @@
                 <li><a href="https://instagram.com/sementesgraos?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sementes Grãos</a></li>
                 <li><a href="https://instagram.com/vivendobemais?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vivendo Bem Mais</a></li>
                 <li><a href="https://instagram.com/sellenemegadiet?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sellene</a></li>
+                <li><a href="https://www.instagram.com/natulandiaoficial?igshid=YTQwZjQ0NmI0OA==" target="_blank">Natulandia</a></li>
                 <li><a href="https://instagram.com/biomundoceiguatemi?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Iguatemi</a></li>
                 <li><a href="https://instagram.com/biomundoshoppingbenfica?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Shopping Benfica</a></li>
             </ul>
