--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -41,6 +41,11 @@
     <main>
         <p>Lanches vegetarianos!</p>
         <div class="lojas">
+            <h3>Bloom</h3>
+            <p>Endereço: Shopping Iguatemi</p>
+            <p>Clique <a href="https://www.instagram.com/bloomfastgood?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Karlota Delícias Artesanais</h3>
             <p>Focaccias, doces e salgados. A melhor focaccia que já comi! As sobremesas também são maravilhosas!</p>
             <p>Clique <a href="https://instagram.com/karlotadeliciasartesanais?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
