--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <footer>
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará.</p>
+        <p>Contato: flaviarster@gmail.com</p>
         <p>Última atualização em: dezembro de 2023.</p>
     </footer>
 </body>
