--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     </script>
 
     <footer>
-        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará.</p>
+        <p>Desenvolvido por Flávia Reis.</p>
         <p>Contato: flaviarster@gmail.com</p>
         <p>Última atualização em: dezembro de 2023.</p>
+        <p>Fortaleza, Ceará.</p>
     </footer>
 </body>
 </html>
