--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -87,6 +87,10 @@
             <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>VegGostosuras</h3>
+            <p>Clique <a href="https://www.instagram.com/veggostosuras?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
