--- a/onde-comer.html
+++ b/onde-comer.html
@@ -86,6 +86,7 @@
         <div class="lojas">
             <h2>Massas!</h2>
             <ul>
+                <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura Cozinha</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
                 <li><a href="https://instagram.com/cozinhamamma_lu?igshid=MzRlODBiNWFlZA==" target="_blank">Cozinha da Mamma Lu</a></li>
                 <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>
