--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -55,6 +55,7 @@
             <h3>XBloom</h3>
             <p>Endereço: Shopping Iguatemi</p>
             <p>Clique <a href="https://www.instagram.com/bloomfastgood?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+            <p>Clique <a href="https://www.instagram.com/xbloom_iguatemibosque?igsh=bjR0dzljYzQycHMy" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Cozinha da Luz</h3>
