--- a/dicas.html
+++ b/dicas.html
@@ -124,6 +124,7 @@
                 <li><a href="https://instagram.com/vivendobemais?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vivendo Bem Mais</a></li>
                 <li><a href="https://instagram.com/sellenemegadiet?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sellene</a></li>
                 <li><a href="https://www.instagram.com/natulandiaoficial?igshid=YTQwZjQ0NmI0OA==" target="_blank">Natulandia</a></li>
+                <li><a href="https://www.instagram.com/naturebasfitfortaleza?igsh=bHU2MGdvZmQxcnpz" target="_blank">Naturebas Fit</a></li>
                 <li><a href="https://instagram.com/biomundoshoppingbenfica?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Shopping Benfica</a></li>
             </ul>
         </div>
