--- a/dicas.html
+++ b/dicas.html
@@ -126,6 +126,7 @@
                 <li><a href="https://www.instagram.com/natulandiaoficial?igshid=YTQwZjQ0NmI0OA==" target="_blank">Natulandia</a></li>
                 <li><a href="https://www.instagram.com/naturebasfitfortaleza?igsh=bHU2MGdvZmQxcnpz" target="_blank">Naturebas Fit</a></li>
                 <li><a href="https://instagram.com/biomundoshoppingbenfica?igshid=YTQwZjQ0NmI0OA==" target="_blank">Bio Mundo Shopping Benfica</a></li>
+                <li><a href="https://www.instagram.com/emporium.produtos?igsh=MmxmeXRsMmRsZzFn" target="_blank">Emporium</a></li>
             </ul>
         </div>
         <div class="lojas">
