--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -42,12 +42,12 @@
         <p>Lanches vegetarianos!</p>
         <div class="lojas">
             <h3>Karlota Delícias Artesanais</h3>
-            <p>Focaccias, doces e salgados. A melhor focaccia que já comi! As sobremesas também são maravilhosas!</p>
+            <p>Focaccias, doces e salgados.</p>
             <p>Clique <a href="https://instagram.com/karlotadeliciasartesanais?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Bike Vegan</h3>
-            <p>"Ativismo Gastronômico Libertário." Sanduíches, salgados, pizzas. Também trabalham com carta de encomendas de congelados.</p>
+            <p>Lanches veganos.</p>
             <p>Somente delivery.</p>
             <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
@@ -59,7 +59,7 @@
         </div>
         <div class="lojas">
             <h3>Cozinha da Luz</h3>
-            <p>Vegburgers saudáveis e deliciosos congelados.</p>
+            <p>Vegburgers congelados.</p>
             <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
@@ -91,6 +91,15 @@
         <div class="lojas">
             <h3>VegGostosuras</h3>
             <p>Clique <a href="https://www.instagram.com/veggostosuras?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Las Crias</h3>
+            <p>Clique <a href="https://www.instagram.com/las_crias_vegan?igsh=eXB0dTF2eDZhamNp" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Liva</h3>
+            <p>Endereço: Rua João Carvalho, 775 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/livavidavegana?igsh=dTZqNTYxaTJ3MjFx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
     </main>
     
